# xSIT

./: README.md  pyproject.toml  requirements.txt
notebooks/: 01_simple.ipynb
sit/dataset/: __init__.py  gen.py  process.py
sit/gbm/: simple.py
sit/gradtree/: classifier.py  embedder.py  grad_boosting.py  regressor.py  set_tree_nn.py
sit/mil/: data.py
sit/tree/: any_all.py  fraction.py  fraction_active.py  preprocessing.py  structure.py
sit/wrappers/: transform.py
